syntax = "proto3";

option java_multiple_files = true;
option java_package = "common.services.grpc.athlete";
option java_outer_classname = "AthleteServiceProto";

package common.services.grpc.athlete;

service AthleteService {
    rpc GetAthletesByCountry (AthletesByCountryRequest) returns (Athletes) {}
    rpc GetAthletesByCompetition (AthletesByCompetitionRequest) returns (Athletes) {}
}

message AthletesByCompetitionRequest {
    string season = 1;
    int32 year = 2;
    string event = 3;
    string sport = 4;
}

message AthletesByCountryRequest {
    string country = 1;
}

message Athletes {
    repeated Athlete athletes = 1;
}

message Athlete {
    int64 id = 1;
    string first = 2;
    string last = 3;
    string gender = 4;
}